<resources>
    <string name="app_name">SubLimeCalendar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="startTime">Start Time</string>
    <string name="finishTime">Finish Time</string>
    <string name="duration">Duration</string>
    <string name="eventType">Event Type</string>
    <string name="note">Note</string>
    <string name="email">Email</string>
    <string name="emails">Emails</string>
    <string name="emailList">Email List</string>
    <string name="location">Location</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="selectTime">Select Time</string>
    <string name="selectDate">Select Date</string>

    <string-array name="eventTypes">
        <item>Personal Event</item>
        <item>Work Event</item>
        <item>Birthday Event</item>
    </string-array>

</resources>
